--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-   "name": "admin_shop",
+   "name": "admin-asm3-nodejs",
    "version": "0.1.0",
    "private": true,
+   "homepage": "https://myusername.github.io/admin-asm3-nodejs",
    "dependencies": {
       "@testing-library/jest-dom": "^5.11.9",
       "@testing-library/react": "^11.2.3",
       "@testing-library/user-event": "^12.6.2",
       "alertifyjs": "^1.13.1",
       "axios": "^0.21.1",
+      "gh-pages": "^6.1.1",
       "multiformats": "^13.1.1",
       "query-string": "^6.13.8",
       "react": "^18.3.1",
@@ -22,7 +24,9 @@
       "start": "set NODE_OPTIONS=--openssl-legacy-provider && set PORT=3001 && react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
-      "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
    },
    "eslintConfig": {
       "extends": [
