--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "admin-asm3-nodejs",
    "version": "0.1.0",
    "private": true,
-   "homepage": "https://thangkiller.github.io/admin-asm3-nodejs/",
+   "homepage": "https://thangkiller.github.io/admin-asm3-nodejs",
    "dependencies": {
       "@testing-library/jest-dom": "^5.11.9",
       "@testing-library/react": "^11.2.3",
